apps/plant-app/overlays/prod/patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: plant-app
spec:
  replicas: 2
  template:
    spec:
      containers:
      - name: nginx
