apps/plant-app/overlays/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: svc-plant-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: plant-app.prod.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: plant-app-service
            port:
              number: 80
